--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,23 @@
 alembic==1.4.2
+Babel==2.8.0
 bcrypt==3.1.7
 blinker==1.4
 cffi==1.14.0
 Click==7.0
 dominate==2.4.0
+Faker==4.0.3
 Flask==1.1.1
+Flask-Admin==1.5.6
+Flask-Babel==1.0.0
 Flask-Bcrypt==0.7.1
 Flask-Bootstrap==3.3.7.1
+Flask-Ext==0.1
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
 Flask-Migrate==2.5.3
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.1
+Flask-Table==0.5.0
 Flask-WTF==0.14.3
 gunicorn==20.0.4
 itsdangerous==1.1.0
@@ -24,9 +30,11 @@ pycparser==2.19
 pyparsing==2.4.6
 python-dateutil==2.8.1
 python-editor==1.0.4
+pytz==2019.3
 six==1.14.0
 SQLAlchemy==1.3.13
 svgwrite==1.3.1
+text-unidecode==1.3
 Tree==0.2.4
 virtualenv==16.7.9
 virtualenvwrapper-win==1.2.5
